--- a/index.html
+++ b/index.html
@@ -10,39 +10,40 @@
 <body>
     <div class="container">
         <div class="img-container">
-            <h1>Grid item 1</h1>
+            <h1>Silky Shores</h1>
             <img src="https://images.unsplash.com/photo-1500485035595-cbe6f645feb1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
-            <h2></h2>
+            <h2>The water is smooth as ever </h2>
         </div>
 
         <div class="img-container">
-            <h1>Grid item 1</h1>
+            <h1>Mountain Tops</h1>
             <img src="https://images.unsplash.com/photo-1537824598505-99ee03483384?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
+            <h2>Beautiful Mountains and rivers</h2>
         </div>
 
         <div class="img-container">
-            <h1>Grid item 1</h1>
+            <h1>Road Side Sea</h1>
             <img src="https://images.unsplash.com/photo-1541410965313-d53b3c16ef17?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
-            <h2></h2>
+            <h2>Roads near waters </h2>
         </div>
 
         <div class="img-container">
-            <h1>Grid item 1</h1>
+            <h1>Frosty skies, Shivering Tides</h1>
             <img src="https://images.unsplash.com/photo-1614586125858-e695dd97d1b6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1203&q=80" alt="">
-            <h2></h2>
+            <h2>Mountains filled with snow and chilly waters</h2>
         </div>
 
         <div class="img-container">
-            <h1>Grid item 1</h1>
+            <h1>Mountains and Trees among the Emerald water </h1>
             <img src="https://images.unsplash.com/photo-1625472603517-1b0dc72846ab?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
-            <h2></h2>
+            <h2>Beautiful waters, deciduous trees and rocky mountains</h2>
         </div>
 
 
         <div class="img-container">
-            <h1>Grid item 1</h1>
+            <h1>Mythical Paths</h1>
            <img src="https://images.unsplash.com/photo-1619441207978-3d326c46e2c9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80" alt="">  
-           <h2></h2>   
+           <h2>Its almost like fantasy, a dream to be in.</h2>   
         </div>
 
     </div>
